--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -275,6 +275,10 @@
     <Content Include="Views\Checkins\Edit.cshtml" />
     <Content Include="Views\Checkins\List.cshtml" />
     <Content Include="Views\Checkins\Index.cshtml" />
+    <Content Include="Views\Shared\_Layout - manager.cshtml" />
+    <Content Include="Views\Home\AdminDashboard.cshtml" />
+    <Content Include="Views\Home\ManagerDashboard.cshtml" />
+    <Content Include="Views\Home\PlayerDashboard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
